[tool.poetry]
name = "bookwyrm"
version = "0.1.0"
description = ""
authors = ["Mouse Reeve <mousereeve@riseup.net>"]

[tool.poetry.dependencies]
python = "^3.9"
celery = "4.4.2"
Django = "3.1.6"
django-model-utils = "4.0.0"
environs = "7.2.0"
flower = "0.9.4"
Markdown = "3.3.3"
Pillow = "^7.1.0"
psycopg2 = "2.8.4"
pycryptodome = "3.9.4"
python-dateutil = "2.8.1"
redis = "3.4.1"
requests = "2.22.0"
responses = "0.10.14"
django-rename-app = "0.1.2"
pytz = "^2021.1"

[tool.poetry.dev-dependencies]
black = { version = "^20.8b1",  allow-prereleases = true}
coverage = "5.1"
pytest-django = "4.1.0"
pytest = "6.1.2"
pytest-cov = "2.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
